fix: language issue

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="nav-content">
             <a href="/" class="logo">🪙 CSD</a>
             <div class="nav-links">
-                <a href="#vsechny-termyny" class="nav-link">Všechny termíny</a>
+                <a href="#vsechny-terminy" class="nav-link">Všechny termíny</a>
                 <a href="#o-projektu" class="nav-link">O projektu</a>
             </div>
         </div>
