--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
     </div>
 
     <script src="scripts/main.js"></script>
-    <script src="scripts/fix.js"></script>
+    <script src="scripts/term-detail-fix.js"></script>
 </body>
 </html>
